# CogniScaffold

./: .gitignore  GEMINI.md  README.md  __init__.py  cli.py  cogni_scaffold.py  main.py  mcp-spec-v1.yaml  pyproject.toml  server.py
cogni_scaffold/: .gitignore  GEMINI.md  README.md  __init__.py  cli.py  knowledge_base.py  main.py  requirements.txt  server.py
